--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
         });
 
         // --- SUPABASE CONFIG ---
-        const supabaseUrl = 'https://mlctklppubajjhtwmnjm.supabase.co';
+        const supabaseUrl = 'https://mithil-db-proxy.astik-mithil.workers.dev';
         const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1sY3RrbHBwdWJhampodHdtbmptIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIwMTg5MTEsImV4cCI6MjA4NzU5NDkxMX0.cO2XLVGfqcJvxShu_pIetLHdnWGbM8IbLOJgCGnHdNg';
         const supabaseBucketName = 'portfolio';
 
